--- a/index.html
+++ b/index.html
@@ -4,5 +4,12 @@
     <div>
       <h1>蛋蛋的个人网站</h1>
     </div>
+    <div>
+      <table>
+        <ul>
+          <li><a href="./vue/show.html">vue</a></li>
+        </ul>
+      </table>
+    </div>
   </body>
 </html>
