--- a/vue/show.html
+++ b/vue/show.html
@@ -1,9 +1,9 @@
 <html>
     <body>
         <div id="app">
-
+            <h1>{{ title }}</h1>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
         <script type="text/javascript">
             var vm = new Vue({
                 el:'#app',
