--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <table>
         <ul>
           <li><a href="./vue/show.html">vue</a></li>
+          <li><a href="./vue/show2.html">vue2</a></li>
         </ul>
       </table>
     </div>
